--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -127,6 +127,7 @@
                                 $('.status span').text(json_data.msg);
                                 setOpBtn(true);
                             }
+                            refreshProjectData();
                             break;
                         case 'stop':
                             if (200 === json_data.code) {
@@ -136,6 +137,7 @@
                             } else {
                                 $('.status span').text(json_data.msg);
                             }
+                            refreshProjectData();
                             break;
                         case  'showlog':
                             break;
@@ -169,7 +171,23 @@
 
             $('.btn-op').on('click', function () {
                 var op = $(this).attr('op');
-                setMsg(op);
+                if (op == "stop") {
+                    layer.confirm("确定要停止该项目吗？", {
+                        title: '系统提示'
+                    }, function (index) {
+                        layer.close(index);
+                        setMsg(op);
+                    });
+                } else if (op == "restart") {
+                    layer.confirm("确定要重启该项目吗？", {
+                        title: '系统提示'
+                    }, function (index) {
+                        layer.close(index);
+                        setMsg(op);
+                    });
+                } else {
+                    setMsg(op);
+                }
             });
 
             function setMsg(opt) {
@@ -178,11 +196,11 @@
                     projectId: "$!projectInfo.id"
                 };
                 layer.load(1, {
-                    shade: [0.3, '#fff'] //0.1透明度的白色背景
+                    shade: [0.3, '#fff']
                 });
                 ws.send(JSON.stringify(data));
                 setTimeout(function () {
-                    layer.closeAll();
+                    layer.closeAll('loading');
                 }, 2000);
             }
         } else {
@@ -223,7 +241,7 @@
 
         function reqLogSize() {
             $.ajax({
-                url: './logSize',
+                url: './log/logSize',
                 type: 'POST',
                 dataType: 'json',
                 data: {
@@ -245,14 +263,12 @@
         }
 
         $('#export').on('click', function () {
-            location.href = "export.html?id=$!projectInfo.id";
+            location.href = "./log/export.html?id=$!projectInfo.id";
         });
 
         $("#resetLog").on('click', function () {
-            $.ajax({
-                url: './resetLog',
-                type: 'POST',
-                dataType: 'json',
+            loadingAjax({
+                url: './log/resetLog',
                 data: {
                     id: "$!projectInfo.id"
                 },
@@ -262,9 +278,6 @@
                         reqLogSize();
                     }
                 },
-                error: function () {
-                    layer.alert("重置日志失败");
-                }
             });
         });
 
@@ -274,9 +287,17 @@
                 title: '备份列表',
                 shade: 0.8,
                 area: ['80%', '90%'],
-                content: 'logBack?id=$!projectInfo.id'
+                content: './log/logBack?id=$!projectInfo.id'
             });
         })
+    }
+    ## 刷新项目数据
+    function refreshProjectData() {
+        try {
+            top.frames["manage"].location.reload();
+        } catch (e) {
+            console.error(e);
+        }
     }
 </script>
 </html>
