--- a/src/main/resources/vm/manage/editProject.vm
+++ b/src/main/resources/vm/manage/editProject.vm
@@ -19,10 +19,10 @@
 
 <body>
 <div class="layui-container div-project" id="div-project">
-    <form action="saveProject" method="post" class="layui-form" id="form_project">
+    <form action="saveProject" method="post" class="layui-form" id="form_project" lay-filter="form_project">
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label"><span class="x-red">*</span>项目名名称</label>
+                <label class="layui-form-label"><span class="x-red">*</span>项目名称</label>
                 <div class="layui-input-block">
                     <input type="text" name="name" placeholder="项目名称" required lay-verify="required"
                            class="layui-input" value="#if($item)#if($item.name)$!item.name#else$!item.id#end#end">
@@ -35,8 +35,12 @@
             <div class="layui-inline">
                 <label class="layui-form-label">分组名称</label>
                 <div class="layui-input-block">
-                    <input type="text" name="group" placeholder="项目分组名称,非必填" class="layui-input"
-                           value="#if($item)$!item.group#end">
+                    <select name="group" lay-filter="group">
+                        #foreach($i in $groups)
+                            <option value="$i" #if($item.group==$i)selected#end>$i</option>
+                        #end
+                        <option value="">选择手动添加</option>
+                    </select>
                 </div>
             </div>
         </div>
@@ -50,20 +54,22 @@
                 </div>
             </div>
             <div class="layui-inline">
-                <label class="layui-form-label">MainClass</label>
+                <label class="layui-form-label"><span class="x-red">*</span>运行方式</label>
                 <div class="layui-input-block">
-                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
-                           value="#if($item)$!item.mainClass#end">
+                    <select name="runMode" lay-filter="runMode">
+                        #foreach($itemPath in $runModes)
+                            <option value="$itemPath" #if($item.runMode==$itemPath)selected#end>$itemPath</option>
+                        #end
+                    </select>
                 </div>
             </div>
-
         </div>
         <div class="layui-form-item">
             <div class="layui-inline">
                 <label class="layui-form-label"><span class="x-red">*</span>项目路径</label>
                 <div class="layui-input-block">
 
-                    <select name="whitelistDirectory" lay-filter="projectLib">
+                    <select name="whitelistDirectory" required lay-verify="required" lay-filter="projectLib">
                         #foreach($itemPath in $whitelistDirectory)
                             #if($item && $itemWhitelistDirectory.startsWith($itemPath))
                                 <option value="$itemPath" selected>$itemPath</option>
@@ -73,13 +79,14 @@
                             #end
                         #end
                         #if(!$hasetPath)
-                            <option value="/" selected>没有匹配项</option>
+                            <option value="">请添加白名单</option>
                         #end
                     </select>
                 </div>
             </div>
+
             <div class="layui-inline">
-                <label class="layui-form-label" title="$!item.log"><span class="x-red">*</span>项目Lib</label>
+                <label class="layui-form-label" title="$!item.log"><span class="x-red">*</span>项目Jar包</label>
                 <div class="layui-input-block">
                     <input type="text" name="lib" placeholder="jar存储的文件夹" required lay-verify="required"
                            class="layui-input" value="#if($item)$!item.lib#end">
@@ -99,15 +106,12 @@
                 </div>
             </div>
         </div>
-        <div class="layui-form-item">
+        <div class="layui-form-item" #if($item)style="display: none;"#end id="mainClassDiv">
             <div class="layui-inline">
-                <label class="layui-form-label"><span class="x-red">*</span>运行方式</label>
+                <label class="layui-form-label">MainClass</label>
                 <div class="layui-input-block">
-                    <select name="runMode">
-                        #foreach($itemPath in $runModes)
-                            <option value="$itemPath" #if($item.runMode==$itemPath)selected#end>$itemPath</option>
-                        #end
-                    </select>
+                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
+                           value="#if($item)$!item.mainClass#end">
                 </div>
             </div>
         </div>
@@ -131,14 +135,14 @@
             <div class="layui-inline">
                 <label class="layui-form-label">Jvm参数</label>
                 <div class="layui-input-block">
-                    <textarea name="jvm" placeholder="jvm参数,非必填"
+                    <textarea name="jvm" placeholder="jvm参数,非必填.如：-Xmin=512m -Xmax=512m"
                               class="layui-textarea">#if($item)$!item.jvm#end</textarea>
                 </div>
             </div>
             <div class="layui-inline">
                 <label class="layui-form-label">args参数</label>
                 <div class="layui-input-block">
-                    <textarea name="args" placeholder="Main函数 args参数,非必填"
+                    <textarea name="args" placeholder="Main函数args参数,非必填.如：--service.port=8080"
                               class="layui-textarea">#if($item)$!item.args#end</textarea>
                 </div>
             </div>
@@ -158,57 +162,87 @@
 </body>
 <script type="text/javascript">
     function loadSuccess() {
+        var tipMsgDiv = ("#tipMsgDiv");
         // 提交项目表单
         form.on('submit(submitProject)', function (data) {
-            $.ajax({
+            loadingAjax({
                 url: data.form.action,
-                type: 'POST',
-                dataType: 'json',
                 data: data.field,
-                beforeSend: function () {
-                    layer.load(1, {
-                        shade: [0.3, '#fff']
-                    });
-                },
                 success: function (data) {
+                    layer.msg(data.msg);
                     if (200 == data.code) {
                         autoClose();
-                    } else {
-                        layer.closeAll();
                     }
-                    layer.msg(data.msg);
-                },
-                error: function (err) {
-                    layer.closeAll();
-                    layer.msg('操作失败！');
                 }
             });
             return false;
         });
+        var selectGroup = $("select[name='group']");
+        form.on('select(group)', function (data) {
+            if (data.value == "") {
+                layer.prompt({
+                    title: '输入分组名，并确认',
+                    formType: 0
+                }, function (text, index) {
+                    layer.close(index);
+                    var ext = $("select[name='group'] option[value='" + text + "']");
+                    if (ext.length <= 0) {
+                        selectGroup.find("option").first().before("<option value='" + text + "'>" + text + "</option>");
+                    }
+                    form.val("form_project", {
+                        "group": text
+                    })
+                    form.render('select');
+                });
+            }
+        });
+
+        form.on('select(runMode)', function (data) {
+            let val = data.value;
+            if (val == "ClassPath") {
+                $("#mainClassDiv").show();
+            } else {
+                $("#mainClassDiv").hide();
+            }
+        });
+        #if($item.runMode=='ClassPath')
+            $("#mainClassDiv").show();
+        #end
 
         form.on('select(projectLib)', function (data) {
             let val = data.value;
             if (val === "") {
                 val = "请选择";
-                $("#tipMsgDiv").hide();
+                tipMsgDiv.hide();
+                tipMsgDiv.attr("msg", "请填写项目路径")
             }
             $("#projectStart").text(val);
-            checngeLib();
-        });
+            if (val !== "") {
+                checngeLib();
+            }
 
+        });
         $("input[name='lib']").change(function (e) {
             let val = $(this).val();
             if (val === "") {
                 val = "请填写";
-                $("#tipMsgDiv").hide();
-            } else {
-                checngeLib();
+                tipMsgDiv.hide();
+                tipMsgDiv.attr("msg", "请填写项目的jar路径")
             }
             $("#projectEnd").text(val);
+            if (val !== "") {
+                checngeLib();
+            }
         });
+        var whitelistDirectorySelect = $("select[name='whitelistDirectory']");
 
         function checngeLib() {
-            var lib = $("#projectStart").text() + $("#projectEnd").text();
+            var wVal = whitelistDirectorySelect.val();
+            if (wVal == "") {
+                layer.msg("请选择白名单");
+                return;
+            }
+            var lib = wVal + $("#projectEnd").text();
             $.ajax({
                 url: './judge_lib.json',
                 type: 'POST',
@@ -225,6 +259,7 @@
                     }
                 },
                 error: function (err) {
+                    layer.msg('检查路径失败，请稍后再试');
                 }
             });
         }
@@ -241,42 +276,27 @@
             layer.confirm(msg, {
                 title: '系统提示'
             }, function (index) {
-                $.ajax({
+                loadingAjax({
                     url: './deleteProject',
-                    type: 'POST',
-                    dataType: 'json',
                     data: {
                         id: id,
                         type: type
                     },
-                    beforeSend: function () {
-                        layer.load(1, {
-                            shade: [0.3, '#fff']
-                        });
-                    },
                     success: function (data) {
-                        layer.close(index);
+                        layer.msg(data.msg);
                         if (200 == data.code) {
                             autoClose();
-                        } else {
-                            layer.closeAll();
                         }
-                        layer.msg(data.msg);
-                    },
-                    error: function (err) {
-                        layer.closeAll();
-                        layer.msg('删除失败！');
                     }
                 });
             });
         });
     }
-
+    ## 刷新项目列表
     function autoClose() {
         setTimeout(function () {
             var index = parent.layer.getFrameIndex(window.name);
             parent.layer.close(index);
-            // 刷新项目列表
             parent.reloadTable();
         }, 2000);
     }
